# src/routes/index.ts
@@ -4,6 +4,7 @@ import memberRoutes from "./member.routes";
 import partnerRoutes from "./partner.routes";
 import eventRoutes from "./event.routes";
 import projectRoutes from "./project.routes";
+import contributorRoutes from "./contributor.routes";
 
 const router = Router();
 
@@ -12,5 +13,6 @@ router.use("/members", memberRoutes);
 router.use("/partners", partnerRoutes);
 router.use("/events", eventRoutes);
 router.use("/projects", projectRoutes);
+router.use("/contributors", contributorRoutes);
 
 export default router;
